--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -3,6 +3,7 @@ load("@rules_cc//cc:defs.bzl", "cc_library")
 cc_library(
     name = "cxxopts",
     hdrs = ["include/cxxopts.hpp"],
+    srcs = ["src/cxxopts.cpp"],
     strip_include_prefix = "include",
     visibility = ["//visibility:public"],
 )
