--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -8,10 +8,6 @@ on:
     branches:
       - master
 
-env:
-  # Customize the CMake build type here (Release, Debug, RelWithDebInfo, etc.)
-  BUILD_TYPE: Release
-
 jobs:
   build:
     name: ${{ matrix.config.name }}
@@ -20,48 +16,37 @@ jobs:
     # cross-platform coverage.
     # See: https://docs.github.com/en/free-pro-team@latest/actions/learn-github-actions/managing-complex-workflows#using-a-build-matrix
     runs-on: ${{ matrix.config.os }}
+    env:
+      BUILD_TYPE: ${{ matrix.config.build_type }}
+      COMPILER: ${{ matrix.config.cxx }}
     strategy:
       fail-fast: false
       matrix:
         config:
-        - {
-            name: "Windows Latest MSVC",
-            os: windows-latest,
-            artifact: "windows_msvc.7z",
-            build_type: "Release",
-            cc: "cl",
-            cxx: "cl",
-            environment_script: "C:/Program Files (x86)/Microsoft Visual Studio/2019/Enterprise/VC/Auxiliary/Build/vcvars64.bat",
-            archiver: "7z a",
-            generators: "Visual Studio 16 2019"
-          }
-        - {
-            name: "Ubuntu latest gcc",
-            os: ubuntu-latest,
-            artifact: "ubuntu_gcc.7z",
-            build_type: "Release",
-            cc: "gcc",
-            cxx: "g++",
-            archiver: "7z a"
-          }
-        - {
-            name: "Ubuntu latest clang",
-            os: ubuntu-latest,
-            artifact: "ubuntu_clang.7z",
-            build_type: "Release",
-            cc: "clang",
-            cxx: "clang++",
-            archiver: "7z a"
-          }
-        - {
-            name: "macOS latest clang",
-            os: macos-latest,
-            artifact: "macos_clang.7z",
-            build_type: "Release",
-            cc: "clang",
-            cxx: "clang++",
-            archiver: "7za a"
-          }
+          - name: "Windows msvc"
+            os: windows-latest
+            build_type: "Release"
+            cc: "cl"
+            cxx: "cl"
+
+          - name: "Ubuntu gcc"
+            os: ubuntu-latest
+            build_type: "Release"
+            cc: "gccc"
+            cxx: "g++"
+
+          - name: "Ubuntu clang"
+            os: ubuntu-latest
+            build_type: "Release"
+            cc: "clang"
+            cxx: "clang++"
+
+          - name: "macOS clang"
+            os: macos-latest
+            build_type: "Release"
+            cc: "clang"
+            cxx: "clang++"
+
     steps:
     - uses: actions/checkout@v2
 
@@ -78,7 +63,7 @@ jobs:
       # Note the current convention is to use the -S and -B options here to specify source
       # and build directories, but this is only available with CMake 3.13 and higher.
       # The CMake binaries on the Github Actions machines are (as of this writing) 3.12
-      run: cmake $GITHUB_WORKSPACE -DCMAKE_BUILD_TYPE=$BUILD_TYPE
+      run: cmake $GITHUB_WORKSPACE -DCMAKE_BUILD_TYPE=$BUILD_TYPE -Werror=dev -DCXXOPTS_BUILD_TESTS=ON -DCMAKE_CXX_COMPILER=$COMPILER
 
     - name: Build
       working-directory: ${{github.workspace}}/build
