--- a/test/find-package-test/CMakeLists.txt
+++ b/test/find-package-test/CMakeLists.txt
@@ -7,5 +7,5 @@ set(CMAKE_CXX_EXTENSIONS OFF)
 
 find_package(cxxopts REQUIRED)
 
-add_executable(library-test "../../src/example.cpp")
+add_executable(library-test "../../example/example.cpp")
 target_link_libraries(library-test cxxopts::cxxopts)
